--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 sudo: false
 language: python
 python:
-  - "3.6"
-  - "3.7-dev"
+  - "3.7"
 install:
-  - pip install pytest
+  - pip install -r requirements-dev.txt
   - pip install -e .
-script: pytest
+  - pre-commit install
+script:
+  - pre-commit run -a
+  - pytest
